# MSLYYC_exploration

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  main.c
include/: callback.h  decompiler.h  early_launch.h  error.h  function_wrapper.h  gml_structs.h  interface.h  memory_management.h  module.h  object.h  pe_parser.h  runner_interface.h  tool.h  utils.h  utils_macro.h
safety_hook_wrapper/: wrapper.cpp  wrapper.h  wrapper.hpp  wrapper_c.cpp
safety_hook_wrapper/include/: wrapper.h  wrapper.hpp
safety_hook_wrapper/source/: wrapper.cpp  wrapper_c.cpp
source/: callback.c  decompiler.c  early_launch.c  error.c  gml_struct.c  interface.c  memory_management.c  module.c  object.c  pe_parser.c  runner_interface.c  tool.c  utils.c
